# passgent

./: .gitignore  GENERATOR_DOCS.md  README.md  go.mod  main.go  passgent-secrets-manager-session.md
.passgent/store/: quxie.age  zazzy.age  zazzy123.age
.passgent/store/notes/: metamask-tckmain-123.age
.passgent/store/notes/router-pass/: nd3.age
.passgent/store/zazzy/: bar.age
.passgent/store/zazzy/qux/: nd3.age
internal/crypto/: crypto.go
internal/generator/: generator.go
internal/identity/: identity.go
passgent-bash/: passgent
passgent-go/: go.sum
passgent-go/.passgent/store/: bar.age  qux.age
passgent-go/.passgent/store/notes/: metamask-tckmain.age
passgent-go/.passgent/store/zazzy/: qux.age
passgent-go/.passgent/store/zazzy/qux/: nd2.age
passgent-go/internal/cmd/: commands.go  root.go
passgent-go/internal/config/: config.go
passgent-go/internal/spectre/: spectre.go
passgent-go/internal/store/: store.go
passgent-rs/: Cargo.toml  README.md
passgent-rs/src/: main.rs
