[package]
name = "passgent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
clap = { version = "4.5.60", features = ["derive"] }
dirs-next = "2.0.0"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.10.1"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
toml = "1.0.3"
